recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: illegal start of simple expression
else {
^